[gd_scene load_steps=6 format=3 uid="uid://cmx18s8a4vo04"]

[ext_resource type="Script" path="res://example/scenes/Airplane/visuals/SteeringThrusters/SteeringThrusters.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c4frdb71hah6s" path="res://example/textures/fire_gradient.png" id="2_2gh4a"]

[sub_resource type="CylinderMesh" id="47"]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0
radial_segments = 16

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fdmc8"]
transparency = 1
blend_mode = 1
shading_mode = 0
albedo_texture = ExtResource("2_2gh4a")

[sub_resource type="SphereMesh" id="48"]
material = SubResource("StandardMaterial3D_fdmc8")
radius = 0.1
radial_segments = 16
rings = 8
is_hemisphere = true

[node name="SteeringThrusters" type="Node3D"]
script = ExtResource("1")

[node name="RollL" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 1.50996e-07, 1.50996e-07, 1.50996e-07, -1, 8.74228e-08, 1.50996e-07, -8.74228e-08, -1, -1.5, 0, 0.5)
mesh = SubResource("47")

[node name="RollLU" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.06581e-14, 0, 1.06581e-14, 1, -1.5, 0.51, 0.5)
mesh = SubResource("48")

[node name="RollLD" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, -1.06581e-14, -1.60933e-21, -1.06581e-14, 1, -1.5, -0.51, 0.5)
mesh = SubResource("48")

[node name="RollR" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 1.50996e-07, 1.50996e-07, 1.50996e-07, -1, 8.74228e-08, 1.50996e-07, -8.74228e-08, -1, 1.5, 0, 0.5)
mesh = SubResource("47")

[node name="RollRU" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.06581e-14, 0, 1.06581e-14, 1, 1.5, 0.51001, 0.5)
mesh = SubResource("48")

[node name="RollRD" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, -1.06581e-14, -1.60933e-21, -1.06581e-14, 1, 1.5, -0.51001, 0.5)
mesh = SubResource("48")

[node name="PitchF" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 1.50996e-07, 1.50996e-07, 1.50996e-07, -1, 8.74228e-08, 1.50996e-07, -8.74228e-08, -1, 0, 0, -1)
mesh = SubResource("47")

[node name="PitchFU" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.06581e-14, 0, 1.06581e-14, 1, 0, 0.51001, -1)
mesh = SubResource("48")

[node name="PitchFD" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, -1.06581e-14, -1.60933e-21, -1.06581e-14, 1, 0, -0.51001, -1)
mesh = SubResource("48")

[node name="PitchB" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 1.81195e-07, 1.50996e-07, 1.50996e-07, -1.2, 8.74228e-08, 1.50996e-07, -1.04907e-07, -1, 0, 0, 0.5)
mesh = SubResource("47")

[node name="PitchBU" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.06581e-14, 0, 1.06581e-14, 1, 0, 0.61, 0.5)
mesh = SubResource("48")

[node name="PitchBD" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, -1.06581e-14, -1.60933e-21, -1.06581e-14, 1, 0, -0.61, 0.5)
mesh = SubResource("48")

[node name="YawF" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.94707e-07, 2.3, 1.50996e-07, 1, 4.47827e-07, 8.74228e-08, 8.74228e-08, 3.4729e-07, -1, 0, 0, -1)
mesh = SubResource("47")

[node name="YawFL" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, -1.06581e-14, 1.06581e-14, 0, 1, -1.16, 0, -1)
mesh = SubResource("48")

[node name="YawFR" type="MeshInstance3D" parent="."]
transform = Transform3D(1.94707e-07, 1, 0, -1, 1.94707e-07, -1.06581e-14, -1.06581e-14, 0, 1, 1.16, 0, -1)
mesh = SubResource("48")

[node name="YawB" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.94707e-07, 2.3, 1.50996e-07, 1, 4.47827e-07, 8.74228e-08, 8.74228e-08, 3.4729e-07, -1, 0, 0, 0.84375)
mesh = SubResource("47")

[node name="YawBL" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, -1.06581e-14, 1.06581e-14, 0, 1, -1.15991, 0, 0.84375)
mesh = SubResource("48")

[node name="YawBR" type="MeshInstance3D" parent="."]
transform = Transform3D(1.94707e-07, 1, 0, -1, 1.94707e-07, -1.06581e-14, -1.06581e-14, 0, 1, 1.15991, 0, 0.84375)
mesh = SubResource("48")
